# ganbot

./: .env.example  .envrc  .gitignore  .mcp-run  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  TODO.md  config.toml  eslint.config.js  flake.nix  ganbot5-architecture-sketch.md  models.toml  models.toml.old  push.sh  test_checkpoint_error.rs  test_image_generations.rs
.claude/: settings.json
api-examples/: txt2image (Qwen-Image).json  txt2img (Krea).json  txt2img (flux).json
context/: comfyui-api.md  gallery.md  invokeai-api.json  invokeai-api.md  irc-crate.md  jujutsu-dev-guide.md  kameo-actors-crate.md  kameo-crate.md  openrouter-api.md
crates/comfyui-api/: Cargo.toml
crates/comfyui-api/examples/: comfyui_example.rs  test_missing_checkpoint.rs
crates/comfyui-api/src/: api.rs  lib.rs  net.rs
examples/: kameo_error_chain.rs  kameo_error_chain_thiserror.rs
help/: commands.md
prompts/: combine_prompt.tmpl
src/: actions.rs  config.rs  fuzzy.rs  help.rs  main.rs  messages.rs  network.rs  persistence.rs  supervisor.rs  util.rs
src/actions/: ask.rs  broker.rs  combine.rs  config.rs  delete.rs  dream.rs  edit.rs  imagen.rs  mod.rs  prompt.rs  select.rs
src/actions/prompt/: parse.rs
src/config/: global.rs  mod.rs  models.rs
src/messages/: chat.rs  imagen.rs  mod.rs
src/network/: comfyui.rs  discord.rs  irc.rs  mod.rs  openai.rs  openrouter.rs  urls.rs  webserver.rs  webserver_htmx.rs
src/network/comfyui/: README.md  api.rs  mod.rs  net.rs
src/network/irc/: sasl.rs
src/network/openai/: tests.rs
src/network/openrouter/: api.rs  structured.rs
src/persistence/: images.rs  user.rs
src/util/: image_compression.rs  kameo.rs  token_bucket.rs
static/: gallery.js  style.css
templates/: base.html  gallery.html  help.html  index.html
tests/fixtures/openai/: generate_1024x1024_response.json
