[package]
name = "ganbot"
version = "0.1.0"
edition = "2024"
default-run = "ganbot"

[[bin]]
name = "comfyui_example"
path = "src/bin/comfyui_example.rs"

# Just during initial development
[lints.rust]
unused_variables = "allow"
dead_code = "allow"

[dependencies]
anyhow = { version = "1.0.98" }
async-trait = "0.1"
base64 = "0.22.1"
bytes = "1.8"
config = "0.14"
dotenvy = "0.15.7"
futures = "0.3.31"
image = "0.25.6"
indexmap = "2.6"
irc = "1.1.0"
kameo = "0.17.2"
kameo_macros = "0.17.0"
notify = "7.0"
openrouter_api = { version = "0.1.6", features = [
    "tracing",
], path = "../openrouter_api" }
rand = "0.9.2"
redis = { version = "0.32.5", features = ["connection-manager", "json", "tcp_nodelay", "tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.12.4"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["v4", "v7"] }
