[package]
name = "ganbot"
version = "0.1.0"
edition = "2024"
default-run = "ganbot"

[profile.dev]
debug = 0
strip = "debuginfo"
[profile.dev.build-override]
opt-level = 3

[[bin]]
name = "comfyui_example"
path = "src/bin/comfyui_example.rs"

[dependencies]
anyhow = { version = "1.0.98" }
base64 = "0.22.1"
bytes = "1.8"
config = "0.14"
futures = "0.3.31"
ab_glyph = "0.2"
image = "0.25.6"
imageproc = "0.25"
indexmap = "2.6"
lazy_static = "1.5"
irc = "1.1.0"
kameo = "0.18.0"
openrouter_api = { version = "0.1.6", features = [
    "tracing",
], path = "../openrouter_api" }
rand = "0.9.2"
redis = { version = "0.32.5", features = [
    "connection-manager",
    "json",
    "tcp_nodelay",
    "tokio-comp",
] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.12.4"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["v4", "v7"] }
tempfile = "3.0"
chrono = "0.4.41"
url = "2.5.7"
kamadak-exif = "0.6.1"
