[package]
name = "ganbot"
version = "0.1.0"
edition = "2024"
default-run = "ganbot"

[workspace]
members = ["crates/comfyui-api"]

[profile.dev]
debug = 0
strip = "debuginfo"
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.ganbot]
opt-level = 3

[dependencies]
anyhow = { version = "1.0.98" }
base64 = "0.22.1"
bytes = "1.8"
config = { version = "0.14", features = ["convert-case", "toml"], default-features = false }
futures = "0.3.31"
ab_glyph = "0.2"
image = { version = "0.25.6", features = ["gif", "jpeg", "png", "rayon", "webp"], default-features = false }
imageproc = "0.25"
webp = "0.3"
indexmap = "2.6"
lazy_static = "1.5"
irc = "1.1.0"
kameo = "0.18.0"
rand = "0.9.2"
redis = { version = "0.32.5", features = [
    "connection-manager",
    "json",
    "tcp_nodelay",
    "tokio-comp",
] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.12.4"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = "0.24"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["serde", "v4", "v7"] }
tempfile = "3.0"
chrono = "0.4.41"
url = "2.5.7"
kamadak-exif = "0.6.1"
levenshtein = "1.0.5"
regex = "1.11.2"
thiserror = "1"
comfyui-api = { path = "crates/comfyui-api" }
notify = "6.1"
rvcr = "0.2.1"
reqwest-middleware = "0.2.5"
axum = "0.8"
axum-htmx = "0.7"
tower = "0.4"
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.8"] }
pulldown-cmark = "0.12"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
socket2 = "0.5"
dirs = "6.0.0"
fs2 = "0.4"
