[package]
name = "comfyui-api"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "rayon"] }
indexmap = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.8"
futures = "0.3.31"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
thiserror = "1"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "time", "net"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "v7"] }
